src/css/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap");
@import url("https://fonts.googleapis.com/css?family=Open+Sans");
* {
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* background: #ececec; */
}

body {
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}

/* FOR CHOOSELANGUGE */

.main_container {
  display: flex;
  flex-direction: column;
  height: 100vh;
  width: 100vw;
}

.police_logo_details_container {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-direction: column;
  height: 25vh;
  width: 100vw;
  /* background-color: pink; */
}

hr{
  border-top: 3px solid orange;
  margin: 10px 0;
}

.police_logo img {
  margin-top: 10px;
  object-fit: contain;
  max-height: 15vh;
  max-width: 25vw;
}

.data_container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100vw;
  height: 60vh;
  /* background-color: red; */
}

.data_container_wrap {
  min-height: 60vh;
  max-width: 75vw;
  display: flex;
  flex-direction : column;
  justify-content: center;
  align-items: center;

  /* background-color: blue; */
}

.heading_auth {
  display: flex;
  height: 15vh;
  flex-direction: column;
  /* background-color: blueviolet; */
  width: 70vw;

  margin: 20px;
  text-align: center;
  font-weight: bolder;
  text-transform: uppercase;
}

.heading_auth p {
  margin-top: 7px;
  font-size: 11px;
}

.form_data {
  display: flex;
  flex-direction: column;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.mobile_num,
.otp_label {
  display: block;
  font-size: 16px;
  font-weight: 500;
  padding: 5px;
  margin-top: 8px;
}

input{
  min-width: 72vw;
  border: none;
  outline: none;
  padding: 8px;
  border-radius: 9px;
  border: 1px solid gray;
}

.mobile_num ::-webkit-outer-spin-button,
.mobile_num ::-webkit-inner-spin-button {
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

input[type="number"] {
  -moz-appearance: textfield;
}

.next {
  margin-bottom: 20px;
}
button {
  border: none;
  outline: none;
  padding: 8px;
  width: 100%;
  color: white;
  font-size: 16px;
  cursor: pointer;
  margin-top: 20px;
  border-radius: 8px;
  background: orange;
  background : pink;
  /* max-width: 70vw; */
  min-width: 40vw;
}

select {
  min-width: 74vw;
  border: none;
  outline: none;
  padding: 8px;
  border-radius: 9px;
  border: 1px solid gray;
  margin: 15px 0px;
}
#ques {
  min-width: 4vw;
  border: none;
  outline: none;
  margin-right: 10px;
}
#ques:after {
  width: 15px;
  height: 15px;
  border-radius: 15px;
  top: -2px;
  left: -1px;
  position: relative;
  background-color: #d1d3d1;
  content: "";
  display: inline-block;
  visibility: visible;
  border: 2px solid white;
}
input[type="radio"]#ques {
  accent-color: #ffa500;
  border: 3px solid black;
}
input[type="radio"]#language_input {
  accent-color: #ffa500;
  border: 3px solid black;
}

#ques:checked:after {
  width: 15px;
  height: 15px;
  border-radius: 15px;
  top: -2px;
  left: -1px;
  position: relative;
  background-color: #ffa500;
  content: "";
  display: inline-block;
  visibility: visible;
  border: 2px solid white;
}
.special {
  padding-bottom: 20px;
}

.question_container p {
  font-size: 16px;
  font-weight: 550;
  padding-top: 20px;
  /* padding-bottom: 20px; */
}
.option {
  font-size: 13px;
  padding-top: 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
  /* justify-content: center; */
}
#review_text {
  height: 10vh;
}
.textarea {
  display: flex;
  flex-direction: column;
  min-width: 70vw;
  border: none;
  outline: none;
  padding: 8px;
  margin: 10px 0;
  /* border-radius: 9px; */
  /* border: 1px solid gray; */
}
.textarea-input {
  min-width: 70vw;
  border: none;
  outline: none;
  padding: 8px;
  margin: 10px 0;
  border-radius: 9px;
  border: 1px solid gray;
}
.language_input {
  min-width: 3vw;
  height: 3vh;
  border: none;
  outline: none;
  padding: 8px;
  border-radius: 9px;
  border: 1px solid gray;
}
.language_data label {
  font-size: 26px;
  padding-left: 11px;
}
.language_data {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  /* background-color: rebeccapurple; */
  width: 40vw;
  margin-top: 10px;
}
.language_ops_wrap {
  display: flex;
  align-items: flex-start;
  justify-content: center;
  /* background-color: red; */
  width: 70vw;
  height: 20vh;
}

/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */
/* ================= */

.containar__1 {
  margin-top: 1rem;
  /* height: 18vh; */
}

.text100 {
  height: 100vh;
  width: 60vw;
}

.btn100 {
  width: 50vw;
  height: 6vh;
  border-radius: 2rem;
  background: rgb(252, 99, 3);
  color: #fff;
}

.btn50 {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-top: 2rem;
}
/* ... */

